<!--
  ~ strings.xml
  ~ Copyright (C) 2016  Lynn
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Data Monitor</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_title">Welcome to Data Monitor.</string>
    <string name="welcome_message">A easy way to manage network traffic</string>

    <string name="install_certificate_title">Install certificate for TLS connections.</string>
    <string name="install_certificate_button_start">INSTALL</string>
    <string name="not_install_certificate_error">Please install the certificate in order to continue.</string>

    <string name="start_service_title">Start service fot the first time.</string>
    <string name="start_service_button_start">START</string>
    <string name="not_start_service_error">Please start the service in order to continue.</string>

    <string name="complete_title">You are all set. Enjoy Data Monitor.</string>
    <string name="complete_message">GET STARTED</string>

    <string name="chart_mobile_data_message">Used this month</string>
    <string name="chart_mobile_data_left">Left</string>

    <string name="dialog_used_today_title">Data used today</string>
    <string name="dialog_used_this_month_title">Data used this month</string>

    <string name="used_today">Used today</string>
    <string name="used_this_month">Used this month</string>
    <string name="remaining_this_month">Remaining this month</string>
    <string name="till_next_settlement">Till next settlement</string>

    <string name="nav_mobile_data_title">Mobile Data</string>
    <string name="nav_detail_title">Detail</string>
    <string name="nav_real_time_title">Real Time</string>

    <string name="title_activity_settings">Settings</string>
    <string name="nav_menu_settings">Settings</string>
    <string name="nav_menu_send_feedback">Send Feedback</string>

    <string name="pref_general_title">GENERAL</string>
    <string name="pref_enable_data_monitoring_title">Data monitoring</string>
    <string name="pref_data_plan_title">Monthly data plan</string>
    <string name="pref_used_data_title">Used data</string>

    <string name="pref_advanced_title">ADVANCED</string>
    <string name="pref_warning_value_title">Data usage warning value</string>

    <string name="pref_about_title">ABOUT</string>
    <string name="pref_introduction_title">Introduction</string>
    <string name="pref_usage_policy_title">Usage Policy</string>
    <string name="pref_usage_policy_summary">Data Monitor is for personal and non-commercial use only.</string>

    <string name="detail_data_type_header">Data Type</string>
    <string name="detail_total_header">Total</string>
    <string name="detail_percent_header">Percent(%)</string>

    <string name="mobile_down">Mobile ↓</string>
    <string name="mobile_up">Mobile ↑</string>
    <string name="wifi_down">Wifi ↓</string>
    <string name="wifi_up">Wifi ↑</string>

    <string name="data_warning_title">Data plan is Insufficient</string>
    <string name="data_warning_content">Go to turn off mobile data.</string>

    <string name="tab_overview_title">Overview</string>
    <string name="tab_wifi_title">Wi-Fi</string>
    <string name="tab_mobile_title">Mobile Data</string>
</resources>
