<?xml version="1.0" encoding="utf-8"?><!--
  ~ activity_main_drawer.xml
  ~ Copyright (C) 2016  Lynn
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_feature"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mobile_data"
            android:checked="true"
            android:icon="@drawable/ic_swap_vertical_circle_black_24dp"
            android:title="@string/nav_mobile_data_title" />
        <item
            android:id="@+id/nav_detail"
            android:icon="@drawable/ic_assessment_black_24dp"
            android:title="@string/nav_detail_title" />
        <item
            android:id="@+id/nav_realtime"
            android:icon="@drawable/ic_timeline_black_24dp"
            android:title="@string/nav_real_time_title" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>
    <group android:id="@+id/group_tools">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_menu_settings" />
        <item
            android:id="@+id/nav_send_feedback"
            android:title="@string/nav_menu_send_feedback" />
    </group>
</menu>
